--- a/aelua/mods/base/css/aelua.css
+++ b/aelua/mods/base/css/aelua.css
@@ -102,6 +102,14 @@ a:hover {
 	background-color: transparent;
 }
 
+.aelua_admin_bar {
+	left: 30%;
+	position: absolute;
+	text-align: center;
+	top: 0px;
+	width: 40%;
+}
+
 .aelua_home_bar {
 	float:left;
 	background-color: transparent;
