--- a/aelua/mods/base/css/aelua.css
+++ b/aelua/mods/base/css/aelua.css
@@ -15,7 +15,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	font-size: 100%;
 	font-family: inherit;
 	vertical-align: baseline;
-	text-decoration: none;
 }
 html{
 	overflow-y: scroll;
@@ -65,10 +64,10 @@ h4 {font-size: 1.4em;}
 h5 {font-size: 1.2em;}
 h6 {font-size: 1em;}
 
-a:link {color: #000;}
-a:visited {text-decoration: none;}
-a:hover {text-decoration: none;}
-a:focus {text-decoration: underline;}
+a:link {color: #000; text-decoration: none;}
+a:visited {color: #000; text-decoration: none;}
+a:hover {color: #000; text-decoration: none;}
+a:focus {color: #000; text-decoration: underline;}
 
 
 .aelua_body {
@@ -261,7 +260,10 @@ a:focus {text-decoration: underline;}
 
 
 .profile_layout{
-    width: 960px;
+margin: 0 auto;
+width: 940px;
+padding-top: 20px;
+padding-bottom: 20px;
 }
 
 .profile_layout_head{
@@ -291,3 +293,12 @@ a:focus {text-decoration: underline;}
     width: 640px;
 }
 
+.profile_name .wetnote_comment_div{
+width: 920px;
+}
+
+.profile_name .wetnote_comment_text {
+width: 760px;
+line-height: 1.1;
+padding-right: 20px;
+}
