--- a/aelua/mods/base/css/aelua.css
+++ b/aelua/mods/base/css/aelua.css
@@ -63,10 +63,10 @@ h4 {font-size: 1.4em;}
 h5 {font-size: 1.2em;}
 h6 {font-size: 1em;}
 
-a:link {color: #000; text-decoration: none;}
-a:visited {color: #000; text-decoration: none;}
-a:hover {color: #000; text-decoration: none;}
-a:focus {color: #000; text-decoration: underline;}
+a:link {color: #666; text-decoration: none;}
+a:visited {color: #666; text-decoration: none;}
+a:hover {color: #666; text-decoration: underline;}
+a:focus {color: #666; text-decoration: underline;}
 
 
 .aelua_body {
