--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -1558,6 +1558,7 @@ div.menu1{
 	border: 2px solid #ccc;
 	margin: 0px 2px 5px 2px;
 	width: 200px;
+	height: 200px;
 	float: left;
 }
 div.menu1:hover{
