--- a/aelua/mods/dumid/css/popup.css
+++ b/aelua/mods/dumid/css/popup.css
@@ -45,7 +45,7 @@ b {
 
 .cont, .contop{
 	width:390px;
-	padding:10px 0 10px 0;
+	padding:5px 0 0 0;
 	margin: 0 auto;
 	clear: both;
 	text-align: center;
